<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
    xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.baeldung</groupId>
    <artifactId>maven-profiles-start</artifactId>
    <version>0.1.0</version>

    <name>maven-profiles-start</name>
    <description>Learn Maven - Maven Profiles - Start</description>

    <packaging>jar</packaging>

    <dependencies>
        <!-- web -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-web</artifactId>
            <version>${spring.boot.version}</version>
        </dependency>

        <!-- data -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-data-jpa</artifactId>
            <version>${spring.boot.version}</version>
        </dependency>
        <dependency>
            <groupId>com.h2database</groupId>
            <artifactId>h2</artifactId>
            <version>${h2.version}</version>
            <scope>runtime</scope>
        </dependency>
        <dependency>
            <groupId>com.mysql</groupId>
            <artifactId>mysql-connector-j</artifactId>
            <version>${mysql.version}</version>
        </dependency>

        <!-- validation -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-validation</artifactId>
            <version>${spring.boot.version}</version>
        </dependency>

        <!-- test -->
        <dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-test</artifactId>
            <version>${spring.boot.version}</version>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <profiles>
        <profile>
            <id>development</id>
            <!-- Different ways to activate profiles based on predefined conditions using the <activation> section. -->
            <!-- Note: In case of multiple activation conditions, the profile is activated only when all conditions are met. -->
            <activation>
                <!-- Profile activation based on the boolean "true" -->
                <activeByDefault>true</activeByDefault>
                <!-- Profile activation based on detected JDK -->
                <jdk>21</jdk>
                <!-- Profile activation based on detected OS-->
                <os>
                    <family>mac</family>
                    <!-- Allowed <family> values: windows, unix, mac, dos, netware, os/2, tandem -->
                </os>
                <!-- Profile activation based on the name of its property -->
                <property>
                    <name>build.env</name>
                    <value>dev</value>
                </property>
                <!-- Profile activation based on whether a specific file exists or is missing by using the <file> tag in the pom.xml file, -->
                <file>
                    <missing>${basedir}/prod-config.properties</missing>
                    <exists>${basedir}/dev-config.properties</exists>
                    <!-- Only works if both conditions (exists and missing) must be true for the profile to activate. Otherwise, activation won't be automated  -->
                </file>
                <!--
                Note:
                    If multiple profiles are active at the same time,
                    the ones defined later in the POM (or external file like settings.xml)
                    take higher priority over those defined earlier (independent of their profile id and activation order).
                    So:
                        - Earlier profile = lower priority
                        - Later profile = higher priority (its properties/dependencies override earlier ones)
                    To check the active profiles, we can execute the following command:
                        - mvn help:active-profiles
                -->
            </activation>
            <properties>
                <env>dev</env>
            </properties>
            <dependencies>
                <dependency>
                    <groupId>com.h2database</groupId>
                    <artifactId>h2</artifactId>
                    <version>${h2.version}</version>
                    <scope>runtime</scope>
                </dependency>
            </dependencies>
        </profile>
        <profile>
            <id>production</id>
            <properties>
                <env>prod</env>
            </properties>
            <dependencies>
                <dependency>
                    <groupId>com.mysql</groupId>
                    <artifactId>mysql-connector-j</artifactId>
                    <version>${mysql.version}</version>
                    <scope>runtime</scope>
                </dependency>
            </dependencies>
        </profile>
    </profiles>

    <build>
        <!-- additional tasks and configurations for build process -->
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.2.5</version>
                <configuration>
                    <argLine>-Dnet.bytebuddy.experimental=true</argLine>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <!-- Prior to JDK 9 and 3.8 Maven versions -->
        <!--
            <maven.compiler.source>21</maven.compiler.source>
            <maven.compiler.target>21</maven.compiler.target>
        -->
        <maven.compiler.release>21</maven.compiler.release>

        <spring.boot.version>3.2.2</spring.boot.version>
        <h2.version>2.2.224</h2.version>
        <mysql.version>9.3.0</mysql.version>
    </properties>
</project>
